# YETI

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  build.ninja  compile_commands.json  main.cpp  main.py  plan.txt
.cache/clangd/index/: curl.h.A95925E3E28D41CB.idx  curlver.h.D8F191844E5A49C1.idx  easy.h.12BA42480EF309AB.idx  header.h.4080F0086BBE7990.idx  json.hpp.5651A49E9575A796.idx  main.cpp.179715183354B09E.idx  mprintf.h.C4872DFD691E1732.idx  multi.h.092EE0E5832D30CD.idx  options.h.C3C8FB2E0F85A574.idx  system.h.699AC9A5CDDDA7B6.idx  urlapi.h.B59D6BEF6DD35F46.idx  websockets.h.1A7713F9C35A608F.idx
.zed/: settings.json
app/Data Extraction/: extract_data.cpp  process_data.cpp
app/Data Extraction/data/: glacier1.json  glacier1std.json  glacier1trs.json  glacier1ts.json  glacier2.json  glacier2_temp.json  glacier2ts.json  glacier3-s1.json  glacier3.json  glacier3trs.json  glacier3ts.json  vid_temp.json  vids.json
app/Interface/: interface.cpp
app/ML Model/: lr.json  lr_model.cpp
app/headers/: libs.h  libs.hpp
app/utils/: api.hpp
frontend/: .ninja_deps  .ninja_log  CMakeLists.txt  build.ninja  main.cpp
server/: main.py
